--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ li>a{
     justify-content: space-evenly;
     background-color: rgb(12, 12, 12);
     align-items: center;
-    padding: 30px 20px;
+    padding: 80px 20px;
 }
 .burger-img{
     width: 100%;
@@ -185,6 +185,7 @@ li>a{
     .main-content{
         flex-direction: column;
         justify-content: center;
+        padding: 40px 20px;
     }
     .burger-img{
         display: flex;
@@ -220,5 +221,176 @@ li>a{
     }
     .learn{
         width: 40%;
+    }
+}
+/* this section is container with responsive */
+.container{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 30px 80px;
+}
+.burger-img{
+    width: 100%;
+    padding: 0px 20px;
+}
+#big-burger{
+    width: 100%;
+}
+.hero-content{
+    width: 100%;
+    padding: 0px 10px;
+}
+.heading2{
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 20px 0px;
+}
+.line{
+    width: 20%;
+    height: 1px;
+    background-color:rgb(255, 187, 0) ;
+}
+.pera2{
+    font-size: x-small;
+    width: 70%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 20px 0px;
+}
+.icon-section{
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nife{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+#spone{
+    color: rgb(221, 149, 15);
+    font-size: xx-large;
+}
+.drop{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+#drop{
+    color: rgb(221, 149, 15);
+    font-size:35px;                                                        
+}
+.leaf{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+#leaf{
+    color: rgb(221, 149, 15);
+    font-size: xx-large;
+}
+
+.icon-pera2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: small;
+}
+.learn{
+    width: 30%;
+    padding: 10px 25px;
+    border-radius: 5px;
+    font-size: x-small;
+    border: none;
+    background-color: rgb(255, 196, 0);
+    margin-top: 30px;
+}
+
+@media only screen and (max-width:1060px) {
+    .heading1{
+        width: 75%;
+    }
+    .pera1{
+        width: 80%;
+    }
+}
+@media only screen and (max-width:960px) {
+       .heading1{
+        width: 100%;
+    }
+    .pera1{
+        width: 100%;
+    }
+    .icon-section{
+        width: 70%;
+    }
+    .learn{
+        width: 40%;
+    }
+}
+@media only screen and (max-width:814px) {
+    .container{
+       flex-direction: column-reverse;
+       justify-content: center;
+        padding: 30px 20px;
+    }
+    .burger-img{
+        display: flex;
+        justify-content: center;
+    }
+    .hero-content{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 10px 100px;
+    }
+    .pera1{
+        font-size: small;
+    }
+
+    .learn{
+        width: 30%;
+        padding: 10px 20px;
+    }
+   
+}
+@media only screen and (max-width:528px) {
+    .hero-content{
+        padding: 10px 40px;
+    }
+    .learn{
+        width: 40%;
+    }
+}
+@media only screen and (max-width:407px) {
+    .hero-content{
+        padding: 10px 10px;
+    }
+    .learn{
+        width: 40%;
+    }
+}
+/* this section is about with responsive */
+.about-section{
+    width: 100%;
+    padding: 20px 80px;
+    line-height: 20px;
+    border-top: 1px solid;
+}
+.head1{
+   color: rgb(255, 136, 0);
+}
+.heading3{
+    padding: 20px 0px;
+}
+.about-pera{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+@media only screen and (max-width:528px) {
+    .about-section{
+        padding: 20px 30px;
+
     }
 }
